Fix sidenote spacing to prevent overlap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -415,7 +415,8 @@ img {
 	clear: right;
 	margin-right: -40%;
 	width: 35%;
-	margin-top: -1.5em;
+	margin-top: 0;
+	margin-bottom: 0.5em;
 	font-size: 0.8rem;
 	line-height: 1.5;
 	color: #666;
